--- a/index.html
+++ b/index.html
@@ -4,15 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Developer Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
     <header>
       <nav>
-        <h3>Ma<span>r</span>y</h3>
+        <h3 class="page-title">Ma<span>r</span>y</h3>
         <ul>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Blog</a></li>
-          <li><button>Hire Me</button></li>
+          <li><button class="btn-primary">Hire Me</button></li>
         </ul>
       </nav>
       <div class="banner">
@@ -23,14 +30,12 @@
             Shot what able cold new see hold.Friendly as an betrayed formerly
             he. Morning because as to society behaved moments.
           </p>
-          <div>
-            <button>Download CV</button>
-            <button>Contact</button>
+          <div class="buttons">
+            <button class="btn-primary">Download CV</button>
+            <button class="btn-secondary">Contact</button>
           </div>
         </section>
-        <section>
-          <img src="images/hardy.png" alt="" />
-        </section>
+        <img src="images/hardy.png" alt="" class="banner-image" />
       </div>
     </header>
 
@@ -45,6 +50,7 @@
           meets clients requirements in our mata.
         </p>
 
+        <!-- About Me Section -->
         <div class="about-me-info">
           <div>
             <p class="info-title">Name:</p>
@@ -65,6 +71,7 @@
         </div>
       </section>
 
+      <!-- Skills Section -->
       <section class="what-i-do">
         <h3 class="section-title">What I Do</h3>
         <p class="section-description">
@@ -114,6 +121,7 @@
         </div>
       </section>
 
+      <!-- Summary Section -->
       <section class="resumee-summary">
         <div class="summary">
           <h4 class="summary-title">My Education</h4>
@@ -181,6 +189,7 @@
       <button>Download CV</button>
     </main>
 
+    <!-- Footer Section -->
     <footer>
       <div>
         <h3>Let's Connect</h3>
