Unresponsive Design Complete

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/style.css" />
@@ -31,8 +31,13 @@
             he. Morning because as to society behaved moments.
           </p>
           <div class="buttons">
-            <button class="btn-primary">Download CV</button>
-            <button class="btn-secondary">Contact</button>
+            <button class="btn-primary">
+              <img src="images/icons/download.svg" alt="Download Icon" />
+              Download CV
+            </button>
+            <button class="btn-secondary">
+              <img src="images/icons/call.svg" alt="Call Icon" /> Contact
+            </button>
           </div>
         </section>
         <img src="images/hardy.png" alt="" class="banner-image" />
@@ -122,96 +127,108 @@
       </section>
 
       <!-- Summary Section -->
-      <section class="resumee-summary">
-        <div class="summary">
-          <h4 class="summary-title">My Education</h4>
-          <div class="summary-item">
-            <h4 class="item-title">Master in Computer Engineering</h4>
-            <p class="item-subinfo">Harvard University / 2015 - 2017</p>
-            <p class="item-desc">
-              List skill/technologies here. You can change the icon above to any
-              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
-              ligula eget dolor.
-            </p>
-          </div>
-          <div class="summary-item">
-            <h4 class="item-title">Master in Computer Engineering</h4>
-            <p class="item-subinfo">Harvard University / 2015 - 2017</p>
-            <p class="item-desc">
-              List skill/technologies here. You can change the icon above to any
-              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
-              ligula eget dolor.
-            </p>
-          </div>
-          <div class="summary-item">
-            <h4 class="item-title">Master in Computer Engineering</h4>
-            <p class="item-subinfo">Harvard University / 2015 - 2017</p>
-            <p class="item-desc">
-              List skill/technologies here. You can change the icon above to any
-              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
-              ligula eget dolor.
-            </p>
-          </div>
-        </div>
+      <section class="resume-summary">
+        <h3 class="section-title">A summary of My Resume</h3>
 
-        <div class="summary">
-          <h4 class="summary-title">My Experience</h4>
-          <div class="summary-item">
-            <h4 class="item-title">Sr. Front End Developer</h4>
-            <p class="item-subinfo">Apple Inc / 2020 - Current</p>
-            <p class="item-desc">
-              List skill/technologies here. You can change the icon above to any
-              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
-              ligula eget dolor.
-            </p>
+        <div class="resume-details">
+          <div class="summary">
+            <h4 class="summary-title">My Education</h4>
+            <div class="summary-item">
+              <h4 class="item-title">Master in Computer Engineering</h4>
+              <p class="item-subinfo">Harvard University / 2015 - 2017</p>
+              <p class="item-desc">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="summary-item">
+              <h4 class="item-title">Master in Computer Engineering</h4>
+              <p class="item-subinfo">Harvard University / 2015 - 2017</p>
+              <p class="item-desc">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="summary-item">
+              <h4 class="item-title">Master in Computer Engineering</h4>
+              <p class="item-subinfo">Harvard University / 2015 - 2017</p>
+              <p class="item-desc">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
           </div>
-          <div class="summary-item">
-            <h4 class="item-title">Jr. Front End Developeer</h4>
-            <p class="item-subinfo">Dribbble Inc / 2018 - 2022</p>
-            <p class="item-desc">
-              List skill/technologies here. You can change the icon above to any
-              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
-              ligula eget dolor.
-            </p>
-          </div>
-          <div class="summary-item">
-            <h4 class="item-title">HTML Deveeloper</h4>
-            <p class="item-subinfo">Adobe Inc / 2017 - 2018</p>
-            <p class="item-desc">
-              List skill/technologies here. You can change the icon above to any
-              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
-              ligula eget dolor.
-            </p>
+
+          <div class="summary">
+            <h4 class="summary-title">My Experience</h4>
+            <div class="summary-item">
+              <h4 class="item-title">Sr. Front End Developer</h4>
+              <p class="item-subinfo">Apple Inc / 2020 - Current</p>
+              <p class="item-desc">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="summary-item">
+              <h4 class="item-title">Jr. Front End Developeer</h4>
+              <p class="item-subinfo">Dribbble Inc / 2018 - 2022</p>
+              <p class="item-desc">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="summary-item">
+              <h4 class="item-title">HTML Deveeloper</h4>
+              <p class="item-subinfo">Adobe Inc / 2017 - 2018</p>
+              <p class="item-desc">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
           </div>
         </div>
       </section>
 
-      <button>Download CV</button>
+      <button class="btn-primary">
+        <img src="images/icons/download.svg" alt="Download Icon" /> Download CV
+      </button>
     </main>
 
     <!-- Footer Section -->
     <footer>
-      <div>
-        <h3>Let's Connect</h3>
-        <p>
-          Please fill out the form on this section to contact with me or call
-          between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
-        </p>
-        <div class="connections">
-          <img src="images/icons/facebook.png" alt="Facebook Icon" />
-          <img src="images/icons/twitter.png" alt="Twitter Icon" />
-          <img src="images/icons/insta.png" alt="Instagram Icon" />
+      <section>
+        <div>
+          <h3>Let's Connect</h3>
+          <p>
+            Please fill out the form on this section to contact with me or call
+            between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+          </p>
+          <div class="connections">
+            <img src="images/icons/facebook.png" alt="Facebook Icon" />
+            <img src="images/icons/twitter.png" alt="Twitter Icon" />
+            <img src="images/icons/insta.png" alt="Instagram Icon" />
+          </div>
         </div>
-      </div>
-      <div>
-        <h3>Let's Message Me</h3>
-        <form class="contact-form">
-          <input type="text" placeholder="Your Name" />
-          <input type="email" placeholder="Your email" />
-          <textarea cols="30" rows="10"></textarea>
-          <input type="submit" value="Submit" />
-        </form>
-      </div>
+        <div>
+          <h3>Let's Message Me</h3>
+          <form class="contact-form">
+            <input type="text" placeholder="Your Name" />
+            <input type="email" placeholder="Your Email" />
+            <textarea cols="30" rows="10" placeholder="Message"></textarea>
+            <button type="submit" class="btn-primary">Submit</button>
+          </form>
+        </div>
+      </section>
+
+      <p class="copyright">
+        Copyright &copy; Modasser Hasan. All Rights Reserved
+      </p>
     </footer>
   </body>
 </html>
