Kind of Responsive Done

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         </ul>
       </nav>
       <div class="banner">
+        <img
+          src="images/developer.png"
+          alt="Developer Text Image"
+          class="developer-text"
+        />
         <section>
           <h3>Hi, I am</h3>
           <h1>Mary Hardy</h1>
